objects/PortalSharingDefaultValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_Access_Level__c</fullName>
        <label>Account Access Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Access_Level__c</fullName>
        <label>Case Access Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Handling_Email_Addresses__c</fullName>
        <label>Error Handling Email Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access_Level__c</fullName>
        <label>Opportunity Access Level</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Portal Sharing Default Values</label>
</CustomObject>